--- a/style/style.css
+++ b/style/style.css
@@ -7,12 +7,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Space+Grotesk:wght@300..700&display=swap');
 
 /*      Página inicio   */
-body{
+body {
     margin: 0px;
     padding: 0;
 }
 
-.container__main{
+.container__main {
     box-sizing: border-box;
     width: 100%;
     height: auto;
@@ -20,14 +20,14 @@ body{
     flex-flow: column nowrap;
 }
 
-.menu__index{
+.menu__index {
     height: 60px;
     width: 100%;
     border-radius: 4px;
     flex-flow: column wrap;
 }
 
-.buttons{
+.buttons {
     width: 100%;
     height: 80%;
     display: flex;
@@ -36,7 +36,7 @@ body{
     align-content: flex-end;
 }
 
-.buttons a{
+.buttons a {
     font-size: 9pt;
     font-family: "Space Grotesk", sans-serif;
     font-weight: 500;
@@ -50,7 +50,7 @@ body{
     border-radius: 1px;
 }
 
-.info__1{
+.info__1 {
     width: 100%;
     height: auto;
     display: flex;
@@ -58,7 +58,7 @@ body{
 }
 
 
-.item__2{
+.item__2 {
     width: 100%;
     flex-flow: column wrap;
     justify-items: flex-start;
@@ -70,7 +70,7 @@ body{
     margin-left: 10px;
 }
 
-.item__2 h4{
+.item__2 h4 {
     font-family: "Space Grotesk", sans-serif;
     font-weight: 300;
     font-optical-sizing: auto;
@@ -79,7 +79,7 @@ body{
     padding-left: 6px;
 }
 
-.item__2 .logo{
+.item__2 .logo {
     width: 100%;
     height: 180px;
     display: flex;
@@ -88,7 +88,7 @@ body{
     align-items: flex-start;
 }
 
-.item__2 img{
+.item__2 img {
     width: 160px;
     height: 160px;
     border-top: 2px solid #a8d0e6;
@@ -101,7 +101,7 @@ body{
 
 
 
-.info__2{
+.info__2 {
     width: 100%;
     height: 300px;
     display: flex;
@@ -109,13 +109,14 @@ body{
     margin-bottom: 3px;
 }
 
-.item__3{
+.item__3 {
     background-color: #374785;
     width: 70%;
     flex-flow: column wrap;
     border-radius: 3px;
 }
-.item__3 .title__item3{
+
+.item__3 .title__item3 {
     font-family: "Space Grotesk", sans-serif;
     font-weight: 400;
     font-optical-sizing: auto;
@@ -124,7 +125,8 @@ body{
     padding: 10px;
     color: #fff;
 }
-.item__3 .infoservicos{
+
+.item__3 .infoservicos {
     font-family: "Space Grotesk", sans-serif;
     font-weight: 300;
     font-optical-sizing: auto;
@@ -145,7 +147,7 @@ body{
 
 
 
-.item__4{
+.item__4 {
     display: flex;
     flex-flow: column nowrap;
     justify-content: space-around;
@@ -155,14 +157,14 @@ body{
     padding-right: 8px;
 }
 
-.item__4 .icons__servicos{
+.item__4 .icons__servicos {
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
     align-items: flex-end;
 }
 
-.item__4 .icons__servicos h4{
+.item__4 .icons__servicos h4 {
     font-family: "Space Grotesk", sans-serif;
     font-weight: 800;
     font-optical-sizing: auto;
@@ -172,7 +174,7 @@ body{
     margin-right: 3px;
 }
 
-.item__4 .icons__servicos img{
+.item__4 .icons__servicos img {
     width: 50px;
     height: 50px;
 }
@@ -182,7 +184,7 @@ body{
 
 
 
-.info__3{
+.info__3 {
     display: flex;
     width: 100%;
     height: auto;
@@ -195,7 +197,7 @@ body{
     padding: 8px;
 }
 
-.button__servicos{
+.button__servicos {
     display: flex;
     width: 100%;
     height: auto;
@@ -208,31 +210,31 @@ body{
     background-color: #a8d0e6;
 }
 
-.button_item1{
+.button_item1 {
     width: 100%;
     display: flex;
     flex-flow: column wrap;
 }
 
-.button_item1 h2{
+.button_item1 h2 {
     font-family: "Space Grotesk", sans-serif;
     font-weight: 500;
     font-optical-sizing: auto;
     text-transform: uppercase;
     font-size: 18px;
-    margin-left: 5px;   
+    margin-left: 5px;
 }
 
-.button_item1 .p__button{
+.button_item1 .p__button {
     font-family: "Space Grotesk", sans-serif;
     font-weight: 300;
     font-optical-sizing: auto;
     text-transform: uppercase;
     font-size: 10px;
-    margin-left: 2px;   
+    margin-left: 2px;
 }
 
-.button_item1 button a{
+.button_item1 button a {
     font-family: "Space Grotesk", sans-serif;
     font-weight: 500;
     font-optical-sizing: auto;
@@ -247,7 +249,7 @@ body{
 
 
 
-.info__3 h1{
+.info__3 h1 {
     font-family: "Space Grotesk", sans-serif;
     font-weight: 500;
     font-optical-sizing: auto;
@@ -257,7 +259,7 @@ body{
     text-align: end;
 }
 
-.info__3 h3{
+.info__3 h3 {
     font-family: "Space Grotesk", sans-serif;
     font-weight: 600;
     font-optical-sizing: auto;
@@ -266,7 +268,7 @@ body{
     margin-top: 35px;
 }
 
-.info__3 p{
+.info__3 p {
     font-family: "Space Grotesk", sans-serif;
     font-weight: 350;
     font-optical-sizing: auto;
@@ -275,7 +277,7 @@ body{
 }
 
 
-.footer__index{
+.footer__index {
     width: 100%;
     height: 30px;
     display: flex;
@@ -292,6 +294,91 @@ body{
 
 
 
+
+
+
+
+
+
+/*      Página de introdução    */
+.container__introducao {
+    box-sizing: border-box;
+    margin: 0;
+    width: 100%;
+    height: 100vh;
+    flex-flow: column nowrap;
+    justify-content: flex-start;
+    align-content: center;
+    background-color: #a8d0e66a;
+    border-radius: 7px;
+}
+
+.texto__introducao{
+    display: flex;
+    width: 100%;
+    height: 200px;
+    flex-flow: column nowrap;
+    padding: 12px;
+    justify-content: flex-end;
+    align-content: center;
+    margin-bottom: 20px;
+}
+.texto__introducao h1{
+    font-family: "Space Grotesk", sans-serif;
+    font-weight: 500;
+    font-optical-sizing: auto;
+    text-transform: uppercase;
+    font-size: 30pt;  
+    text-align: center;  
+}
+
+.texto__introducao h3{
+    font-family: "Space Grotesk", sans-serif;
+    font-weight: 400;
+    font-optical-sizing: auto;
+    text-transform: uppercase;
+    font-size: 10pt;   
+    margin-top: 20px; 
+}
+
+.texto__introducao p{
+    font-family: "Space Grotesk", sans-serif;
+    font-weight: 300;
+    font-optical-sizing: auto;
+    text-transform: uppercase;
+    font-size: 8pt;   
+    text-decoration: underline; 
+}
+
+.button__pagIndex{
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.button__pagIndex button{
+    width: 90%;
+    height: 38px;
+    margin-right: 8px;
+    text-align: center;
+}
+.button__pagIndex button a{
+    text-decoration: none;
+    font-family: "Space Grotesk", sans-serif;
+    font-weight: 500;
+    font-optical-sizing: auto;
+    text-transform: uppercase;
+    font-size: 15pt;  
+    color: black;
+}
+ .button__pagIndex img {
+    width: 25%;
+ }
+
+
 /*      Página Serviços   */
 
 
@@ -300,10 +387,3 @@ body{
 
 
 /*      Página Institucional   */
-
-
-
-
-
-
-
