--- a/style/style.css
+++ b/style/style.css
@@ -283,7 +283,7 @@ body {
     display: flex;
     flex-flow: row nowrap;
     justify-content: center;
-    align-items: center;
+    align-content: center;
     margin-top: 5px;
     font-family: "Space Grotesk", sans-serif;
     font-weight: 500;
@@ -305,12 +305,13 @@ body {
     box-sizing: border-box;
     margin: 0;
     width: 100%;
-    height: 100vh;
+    height: 88vh;
     flex-flow: column nowrap;
     justify-content: flex-start;
     align-content: center;
     background-color: #a8d0e66a;
     border-radius: 7px;
+    margin-bottom: 15px;
 }
 
 .texto__introducao{
