--- a/style/style.css
+++ b/style/style.css
@@ -380,10 +380,28 @@ body {
  }
 
 
+
+
+
+
+
+
+
 /*      Página Serviços   */
-
-
-
+.servicos__card{
+    display: flex;
+    width: 100%;
+    height: 400px;
+    flex-flow: row wrap;
+    background-color: #dce3e6;
+    justify-content: space-evenly;
+    row-gap: 12px;
+    padding: 10px;
+}
+.card{
+    display: flex;
+    padding: 32px;
+}
 
 
 
