--- a/style/style.css
+++ b/style/style.css
@@ -468,7 +468,7 @@ body {
     font-weight: 300;
     font-optical-sizing: auto;
     text-transform: uppercase;
-    font-size: 7pt;  
+    font-size: 8px;  
     margin-top: 4px;
 }
 .card img{
