--- a/style/style.css
+++ b/style/style.css
@@ -491,7 +491,7 @@ body {
     text-decoration: none;
     text-align: center;
     text-shadow: 1px 1px 3px black;
-    font-size: 7pt;  
+    font-size: 7px;  
 }
 
 .componente__servicos{
