--- a/style/style.css
+++ b/style/style.css
@@ -279,7 +279,7 @@ body {
 
 .footer__index {
     width: 100%;
-    height: 30px;
+    height: 50px;
     display: flex;
     flex-flow: row nowrap;
     justify-content: center;
@@ -290,8 +290,23 @@ body {
     font-optical-sizing: auto;
     text-transform: uppercase;
     font-size: 14px;
-}
 
+}
+.footer__index p{
+    width: 100%;
+    height: 50px;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+    margin-top: 5px;
+    font-family: "Space Grotesk", sans-serif;
+    font-weight: 500;
+    font-optical-sizing: auto;
+    text-transform: uppercase;
+    font-size: 14px;
+    box-shadow: -4px 0px 1px black;
+}
 
 
 
@@ -396,7 +411,7 @@ body {
     align-content: center;
     width: 100%;
     height: auto;
-    row-gap: 20px;
+    row-gap: 5px;
 }
 
 
@@ -417,8 +432,8 @@ body {
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
-    padding-top: 30px;
-    border-top: 1px solid #a8d0e6;
+    padding-top: 10px;
+
 
 }
 
@@ -431,6 +446,19 @@ body {
     text-align: end;
     color: black;
     margin-bottom: 10px;   
+}
+
+.info__servicos .medida__span{
+        font-family: "Space Grotesk", sans-serif;
+    font-weight: 500;
+    font-optical-sizing: auto;
+    text-transform: uppercase;
+    font-size: 20pt;
+    text-align: end;
+    color: black;
+    margin-bottom: 10px; 
+    text-decoration: underline;
+    padding-bottom: 18px;  
 }
 
 .info__servicos p{
