--- a/style/style.css
+++ b/style/style.css
@@ -124,6 +124,7 @@ body {
     font-size: 22px;
     padding: 10px;
     color: #fff;
+        text-shadow: -1px 1px 1px black;
 }
 
 .item__3 .infoservicos {
@@ -131,11 +132,11 @@ body {
     font-weight: 300;
     font-optical-sizing: auto;
     text-transform: uppercase;
-    font-size: 15px;
+    font-size: 14px;
     padding: 10px;
     color: #fff;
+    text-shadow: -1px 1px 1px black;
 }
-
 
 
 
@@ -190,9 +191,8 @@ body {
     height: auto;
     flex-flow: column nowrap;
     justify-content: center;
-    align-items: center;
-    margin-top: 80px;
-    margin-bottom: 11px;
+    align-content: center;
+    margin-top: 40px;
     box-sizing: border-box;
     padding: 8px;
 }
@@ -200,20 +200,21 @@ body {
 .button__servicos {
     display: flex;
     width: 100%;
-    height: auto;
+    height: 230px;
     flex-flow: column nowrap;
     justify-content: space-evenly;
     align-items: center;
-    margin-top: 80px;
     padding: 10px;
-    border-radius: 3px;
-    background-color: #a8d0e6;
+    background-color: #fff;
+    border-top: 1px solid black;
+    margin-top: 15px;
 }
 
 .button_item1 {
     width: 100%;
     display: flex;
     flex-flow: column wrap;
+    margin-bottom: 35px;
 }
 
 .button_item1 h2 {
@@ -243,8 +244,21 @@ body {
     text-decoration: none;
     color: whitesmoke;
 }
-
-
+.button_item1 .whatsapp__Button{
+    background-color: #25D366;
+    border: none;
+    margin: 5px;
+    border-radius: 4px;
+    height: 34px;
+}
+.button_item1 .whatsapp__Button a{
+    font-family: "Space Grotesk", sans-serif;
+    font-weight: 700;
+    font-optical-sizing: auto;
+    text-transform: uppercase;
+    font-size: 13px;
+    color: black;
+}
 
 
 
@@ -284,7 +298,6 @@ body {
     flex-flow: row nowrap;
     justify-content: center;
     align-content: center;
-    margin-top: 5px;
     font-family: "Space Grotesk", sans-serif;
     font-weight: 500;
     font-optical-sizing: auto;
@@ -299,13 +312,11 @@ body {
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
-    margin-top: 5px;
     font-family: "Space Grotesk", sans-serif;
     font-weight: 500;
     font-optical-sizing: auto;
     text-transform: uppercase;
     font-size: 14px;
-    box-shadow: -4px 0px 1px black;
 }
 
 
@@ -408,7 +419,7 @@ body {
     flex-flow: column nowrap;
     box-sizing: border-box;
     justify-content: space-around;
-    align-content: center;
+    align-items: center;
     width: 100%;
     height: auto;
     row-gap: 5px;
@@ -443,9 +454,9 @@ body {
     font-optical-sizing: auto;
     text-transform: uppercase;
     font-size: 20pt;
-    text-align: end;
+    text-align: start;
     color: black;
-    margin-bottom: 10px;   
+    margin-bottom: 15px;   
 }
 
 .info__servicos .medida__span{
@@ -527,7 +538,7 @@ body {
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: 90%;
 }
 
 .componente__servicos .alert{
