--- a/style/style.css
+++ b/style/style.css
@@ -567,4 +567,32 @@ body {
 }
 
 
+.modal{
+    display: none;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    top: 50%;
+    left: 50%;
+    background-color: rgba(0, 0, 0, 0.6);
+    position: fixed;
+    z-index: 999;
+    box-sizing: border-box;
+}
+
+.modal__content{
+    width: 100%;
+    background-color: #a8d0e6;
+    padding: 5px;
+    position: relative;
+    border-radius: 8px;
+    box-shadow: 0 5px 20px rgba(0,0,0,0.3);
+}
+
+
+
+
+
+
+
 /*      Página Institucional   */
