--- a/style/style.css
+++ b/style/style.css
@@ -597,7 +597,25 @@ body {
     align-items: center;
 }
 
+.modal__content h2{
+    font-family: "Space Grotesk", sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+    font-optical-sizing: auto;
+    text-transform: uppercase;
+    text-align: end;
+    padding: 5px;
+}
 
+.modal__content p{
+    font-family: "Space Grotesk", sans-serif;
+    font-weight: 400;
+    font-size: 12px;
+    font-optical-sizing: auto;
+    text-transform: uppercase;
+    text-align: start;
+    padding: 5px;
+}
 
 
 
