--- a/style/style.css
+++ b/style/style.css
@@ -447,6 +447,7 @@ body {
     width: 100%;
     justify-content: center;
     align-items: center;
+    padding: 0px 10px;
 }
 
 .info__servicos{
@@ -495,8 +496,98 @@ body {
     color: black;
 }
 
+.info__escolherservico{
+    display: flex;
+    flex-flow: column nowrap;
+    width: 100%;
+    justify-content: center;
+    align-items: flex-start;
+    margin-bottom: 30px;
+}
+
+.info__escolherservico h3{
+    font-family: "Space Grotesk", sans-serif;
+    font-weight: 500;
+    font-optical-sizing: auto;
+    text-transform: uppercase;
+    font-size: 20pt;
+    text-align: start;
+    color: black;
+    padding-left: 5px;
+}
+
+.info__escolherservico p{
+    font-family: "Space Grotesk", sans-serif;
+    font-weight: 300;
+    font-optical-sizing: auto;
+    text-transform: uppercase;
+    font-size: 10pt;
+    text-align: start;
+    color: black;
+    padding-left: 7px;
+}
+
+
+.container__card{
+    display: flex;
+    width: 100%;
+    height: auto;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-content: center;
+}
+
+
+.card__residencial{
+    width: 100%;
+    height: auto;
+    display: none;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+    margin-left: 8px;
+
+}
+
+
+.card__comercial{
+    width: 100%;
+    height: auto;
+    display: none;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+    margin-left: 8px;
+}
+
+
+
+.buttons__escolherservico{
+    display: flex;
+    width: 100%;
+    padding: 10px;
+}
+
+.buttons__escolherservico button{
+    margin: 3px;
+    font-family: "Space Grotesk", sans-serif;
+    font-weight: 500;
+    font-optical-sizing: auto;
+    text-transform: uppercase;
+    font-size: 10pt;
+    color: whitesmoke;
+    text-shadow: 0px 1px 2px black;
+    box-shadow: -1px 1px 2px darkgray;
+}
+
+
+
+.info__escolherservico .btn{
+    width: 100%;
+}
+
+
 .card{
-    width: 100px;
+    width: 180px;
+    height: auto;
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
