--- a/style/style.css
+++ b/style/style.css
@@ -110,7 +110,8 @@ body {
 }
 
 .item__3 {
-    background-color: rgba(249, 249, 249, 0.859);    width: 70%;
+    background-color: rgba(249, 249, 249, 0.859);    
+    width: 70%;
     height: auto;
     flex-flow: column wrap;
     border-radius: 3px;
@@ -459,6 +460,7 @@ body {
     justify-content: center;
     align-items: center;
     padding-top: 10px;
+    margin-top: 15px;
 
 
 }
@@ -544,7 +546,7 @@ body {
     display: none;
     flex-flow: row wrap;
     justify-content: flex-start;
-    margin-left: 8px;
+    margin-left: 10px;
 
 }
 
@@ -555,7 +557,7 @@ body {
     display: none;
     flex-flow: row wrap;
     justify-content: flex-start;
-    margin-left: 8px;
+    margin-left: 10px;
 }
 
 
@@ -652,6 +654,7 @@ body {
     justify-content: center;
     align-content: center;
     border-radius: 5px;
+    background-color: rgb(247, 236, 236); 
 }
 
 .componente__servicos .alert{
@@ -666,14 +669,13 @@ body {
 
 .componente__servicos h3{
     font-family: "Space Grotesk", sans-serif;
-    font-weight: 400;
+    font-weight: 500;
     font-size: 9pt;
     font-optical-sizing: auto;
     text-transform: uppercase;
     text-align: center;
     padding: 10px;
-    color: whitesmoke;
-    text-shadow: -1px 0px 1px black;
+    color: black;
 }
 
 
@@ -737,3 +739,21 @@ body {
 
 
 /*      Página Institucional   */
+.container__institucional{
+    box-sizing: border-box;
+    width: 100%;
+    height: 100vh;
+    background-color: #fff;
+}
+
+
+
+
+
+
+
+
+
+
+
+
