--- a/style/style.css
+++ b/style/style.css
@@ -218,10 +218,12 @@ body {
     align-items: center;
 }
 
-.button__homepage .btn{
+.button__homepage .btn a{
     height: 36px;
     width: 50%;
+    font-size: 10px;
 }
+
 
 .button_item1 {
     width: 100%;
@@ -271,7 +273,7 @@ body {
     font-weight: 700;
     font-optical-sizing: auto;
     text-transform: uppercase;
-    font-size: 13px;
+    font-size: 10px;
     color: black;
 }
 
