--- a/style/style.css
+++ b/style/style.css
@@ -379,7 +379,7 @@ body {
 
 .texto__introducao h3{
     font-family: "Space Grotesk", sans-serif;
-    font-weight: 400;
+    font-weight: 300;
     font-optical-sizing: auto;
     text-transform: uppercase;
     font-size: 11pt;   
@@ -388,7 +388,7 @@ body {
 
 .texto__introducao p{
     font-family: "Space Grotesk", sans-serif;
-    font-weight: 300;
+    font-weight: 500;
     font-optical-sizing: auto;
     text-transform: uppercase;
     font-size: 8pt;   
@@ -402,6 +402,7 @@ body {
     flex-flow: row nowrap;
     justify-content: center;
     align-items: center;
+    padding: 12px;
 }
 
 .button__pagIndex button{
