--- a/style/style.css
+++ b/style/style.css
@@ -348,7 +348,7 @@ body {
     box-sizing: border-box;
     margin: 0;
     width: 100%;
-    height: 88vh;
+    height: 85vh;
     flex-flow: column nowrap;
     justify-content: flex-start;
     align-content: center;
@@ -384,6 +384,7 @@ body {
     text-transform: uppercase;
     font-size: 11pt;   
     margin-top: 20px; 
+    padding: 8px;
 }
 
 .texto__introducao p{
@@ -392,7 +393,8 @@ body {
     font-optical-sizing: auto;
     text-transform: uppercase;
     font-size: 8pt;   
-    text-decoration: underline; 
+    text-decoration: underline;
+    padding: 8px; 
 }
 
 .button__pagIndex{
