--- a/style/style.css
+++ b/style/style.css
@@ -113,6 +113,7 @@ body {
     align-items: center;
     border-radius: 8px;
     background-color: #101728;
+    z-index: 300;
 }
 
 
@@ -126,6 +127,8 @@ body {
     padding: 5px;
     border-radius: 4px;
     background-color: #fff;
+    box-shadow: 1px 1px 2px darkgray;
+    z-index: 400;
 }
 
 .item__3 .icons__servicos h4 {
@@ -562,10 +565,11 @@ body {
     font-weight: 500;
     font-optical-sizing: auto;
     text-transform: uppercase;
-    font-size: 8pt;
+    font-size: 10pt;
     color: whitesmoke;
+    border: none;
     text-shadow: 0px 1px 2px black;
-    box-shadow: -1px 1px 2px darkgray;
+    background-color: #101728;
 }
 
 
@@ -689,6 +693,7 @@ body {
 .modal__content{
     width: 95%;
     height: auto;
+    margin: 10px;
     background-color: whitesmoke;
     padding: 15px;
     position: relative;
@@ -708,9 +713,9 @@ body {
     font-size: 20px;
     font-optical-sizing: auto;
     text-transform: uppercase;
-    padding: 5px;
     color: black;
     border-bottom: 1px solid darkgray;
+    text-align: end;
 }
 
 .modal__content p{
@@ -749,7 +754,100 @@ body {
 
 
 
+.carrossel-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  overflow: hidden;
+  background-color: white;
+  padding: 1rem;
+  text-align: center;
+  max-width: 350px;
+  margin: auto;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
 
+.carrossel-slide {
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  height: auto;
+  width: 90%;
+}
+
+.carrossel-slide img {
+  width: 70%;
+  height: auto;
+  border-radius: 6px;
+  margin-bottom: 1rem;
+}
+
+.carrossel-slide h2 {
+  font-size: 1.2rem;
+  margin: 0.5rem 0;
+  color: #333;
+}
+
+.carrossel-slide .texto-scroll {
+  max-height: 95px;  /* Ajuste a altura conforme o layout do slide */
+  overflow-y: auto;
+  padding: 0.8rem;
+  text-align: justify;
+  font-size: 8pt;
+  font-weight: 300;
+  width: 100%;
+  border-bottom: 1px solid rgba(211, 208, 208, 0.518);
+}
+
+.carrossel-slide button {
+  padding: 0.5rem 1rem;
+  background-color: #25D366;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  width: 100%;
+  font-family: "Space Grotesk", sans-serif;
+  font-weight: 500;
+  font-optical-sizing: auto;
+  text-transform: uppercase;
+  font-size: 15px;
+}
+
+.carrossel-slide.ativo {
+  display: flex;
+}
+
+.carrossel-btn {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  border: none;
+  padding: 0.5rem;
+  border-radius: 50%;
+  cursor: pointer;
+  backdrop-filter: blur(4px);
+}
+
+#prevBtn {
+  left: 8px;
+}
+
+#nextBtn {
+  right: 8px;
+}
+
+.closeModal{
+    display: flex;
+    text-align: end;
+    margin: 2px;
+    color: rgb(62, 60, 60);
+    padding-top: 4px;
+    border-bottom: 1px solid rgb(229, 224, 224);
+}
 
 
 
