--- a/style/style.css
+++ b/style/style.css
@@ -451,7 +451,6 @@ body {
     justify-content: center;
     align-items: center;
     padding: 0px 10px;
-    border-bottom: 1px solid rgb(199, 198, 198);
 }
 
 .info__servicos{
@@ -463,7 +462,7 @@ body {
     justify-content: center;
     align-items: center;
     padding: 20px 10px 0px;
-    margin-top: 10px;
+    margin-top: 0px;
 }
 
 .info__servicos h2{
@@ -508,7 +507,7 @@ body {
     width: 100%;
     justify-content: center;
     align-items: center;
-    margin-bottom: 30px;
+    margin-bottom: 5px;
 }
 
 .info__escolherservico h3{
@@ -549,9 +548,8 @@ body {
     width: 100%;
     height: auto;
     display: none;
-    flex-flow: column nowrap;
+    flex-flow: row wrap;
     justify-content: flex-start;
-    margin-left: 10px;
 
 }
 
@@ -560,9 +558,8 @@ body {
     width: 100%;
     height: auto;
     display: none;
-    flex-flow: column nowrap;
+    flex-flow: row wrap;
     justify-content: flex-start;
-    margin-left: 10px;
 }
 
 
@@ -577,14 +574,13 @@ body {
 .buttons__escolherservico button{
     margin: 3px;
     font-family: "Space Grotesk", sans-serif;
-    font-weight: 500;
+    font-weight: 600;
     font-optical-sizing: auto;
     text-transform: uppercase;
     font-size: 10pt;
-    color: whitesmoke;
-    border: none;
-    text-shadow: 0px 1px 2px black;
-    background-color: #101728;
+    color: black;
+    border: 1px groove black;
+    background-color: #fff;
 }
 
 
@@ -595,13 +591,14 @@ body {
 
 
 .card{
-    width: 90%;
+    width: 40%;
+    flex: auto;
     height: auto;
     display: flex;
     flex-flow: column wrap;
     justify-content: center;
     align-items: center;
-    padding: 15px;
+    padding: 12px;
     margin: 5px;
     box-shadow: -1px 1px 3px rgba(245, 222, 179, 0.642);
     z-index: 900;
@@ -618,15 +615,15 @@ body {
 
 .card p{
     font-family: "Space Grotesk", sans-serif;
-    font-weight: 300;
+    font-weight: 400;
     font-optical-sizing: auto;
     text-transform: uppercase;
-    font-size: 11px;
+    font-size: 10px;
     margin-top: 4px;
 }
 
 .card img{
-    width: 20%;
+    width: 22%;
 }
 
 .card p span{
@@ -637,16 +634,16 @@ body {
     margin-top: 6px;
     text-decoration: none;
     text-align: center;
-    box-shadow: -1px 0px 3px darkgray;
     cursor: pointer;
-    background-color: #101728;
 }
 
 .card p span a{
     text-decoration: none;
     text-align: center;
-    text-shadow: 1px 1px 3px black;
-    font-size: 11px;  
+    font-size: 11px;
+    color: black;  
+    background-color: #e4e5e6;
+    font-weight: 400;
 }
 
 .componente__servicos{
@@ -656,7 +653,7 @@ body {
     align-items: center;
     width: 90%;
     border-radius: 9px;
-    margin: 8px 5px 12px;
+    margin: 0px 5px 8px;
 }
 
 .info__whatsapp{
