--- a/style/style.css
+++ b/style/style.css
@@ -643,7 +643,7 @@ body {
     font-size: 11px;
     color: black;  
     background-color: #e4e5e6;
-    font-weight: 400;
+    font-weight: 700;
 }
 
 .componente__servicos{
@@ -688,10 +688,7 @@ body {
 .modal{
     display: none;
     width: 100%;
-    height: 90%;
-    overflow: auto;
-    top: 50%;
-    left: 50%;
+    height: auto;
     background-color: rgba(0, 0, 0, 0.6);
     position: fixed;
     z-index: 999;
@@ -702,16 +699,15 @@ body {
 }
 
 .modal__content{
-    width: 90%;
-    height: 98%;
-    margin: 10px;
-    background-color: whitesmoke;
-    padding: 15px;
+    width: 95%;
+    height: auto;
+    background-color: #fff;
     position: relative;
     border-radius: 8px;
     box-shadow: 0 5px 20px rgba(0,0,0,0.8);
     display: flex;
-    flex-flow: column;
+    flex-flow: row;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: flex-start;
     box-shadow: -1px 1px 25px black;
@@ -725,8 +721,48 @@ body {
     font-optical-sizing: auto;
     text-transform: uppercase;
     color: black;
-  
     text-align: end;
+}
+
+.item__modal{
+    width: 140px;
+    display: flex;
+    flex: auto;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 7px;
+    z-index: 999;
+    border: 1px solid black;
+    margin: 5px;
+    border-radius: 7px;
+}
+
+.item__modal img{
+    width: 70px;
+    margin: px;
+}
+
+.item__modal h2{
+    font-family: "Space Grotesk", sans-serif;
+    font-weight: 600;
+    font-size: 15px;
+    font-optical-sizing: auto;
+    text-transform: uppercase;
+    text-align: start;
+    padding: 5px;
+    color: black;
+}
+
+.obj__modal .item__modal p{
+    font-family: "Space Grotesk", sans-serif;
+    font-weight: 300;
+    font-size: 10px;
+    font-optical-sizing: auto;
+    text-transform: uppercase;
+    text-align: center;
+    padding: 5px;
+    color: black;
 }
 
 .modal__content p{
@@ -755,6 +791,7 @@ body {
     width: 250px;
     height: 250px;
 }
+
  .item__box1 p{
     font-family: "Space Grotesk", sans-serif;
     font-weight: 500;
@@ -762,6 +799,31 @@ body {
     font-optical-sizing: auto;      
     text-transform: uppercase;
  }
+
+
+
+.obj__modal{
+    display: flex;
+    width: 100%;
+    height: auto;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    box-sizing: border-box;
+}
+
+.closeModal{
+    display: flex;
+    text-align: end;
+    margin: 2px;
+    color: rgb(62, 60, 60);
+    padding-top: 4px;
+    border-bottom: 1px solid rgb(229, 224, 224);
+}
+
+
+
 
 
 
@@ -775,95 +837,59 @@ body {
   background-color: white;
   padding: 1rem;
   text-align: center;
-  max-width: 350px;
-  margin: 5px;
+  max-width: 90%;
+  margin: 15px;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
 
 .carrossel-slide {
   display: none;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
   align-items: center;
   height: auto;
   width: 100%;
   padding: 10px;
 }
 
-.carrossel-slide img {
-  width: 70%;
-  height: 270px;
-  border-radius: 6px;
-  margin-bottom: 5px;
-}
-
-.carrossel-slide h2 {
-  font-size: 1.2rem;
-  margin: 0.5rem 0;
-  color: #333;
-  font-weight: 800;
-}
-
-.carrossel-slide .texto-scroll {
-  max-height: 95px;  /* Ajuste a altura conforme o layout do slide */
-  overflow-y: auto;
-  padding: 5px;
-  border-radius: 4px;
-  text-align: justify;
-  font-size: 8pt;
-  font-weight: 300;
-  width: 100%;
-  border-bottom: 2px solid rgba(211, 208, 208, 0.518);
-
-}
-
-.carrossel-slide button {
-  padding: 0.5rem 1rem;
-  background-color: #25D366;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  width: 100%;
-  font-family: "Space Grotesk", sans-serif;
-  font-weight: 500;
-  font-optical-sizing: auto;
-  text-transform: uppercase;
-  font-size: 15px;
-  text-shadow: 1px 1px 1px black;
-}
-
 .carrossel-slide.ativo {
   display: flex;
 }
 
+.buttons__modal_nav{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+}
+
+.navmodal{
+    display: flex;
+    padding: 5px;
+}
+
 .carrossel-btn {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
+  display: flex;
   border: none;
-  padding: 0.5rem;
+  padding: 0.8rem;
   border-radius: 50%;
   cursor: pointer;
-  backdrop-filter: blur(4px);
 }
+
 
 #prevBtn {
   left: 8px;
 }
 
 #nextBtn {
+    margin-left: 4px;
   right: 8px;
 }
 
-.closeModal{
-    display: flex;
-    text-align: end;
-    margin: 2px;
-    color: rgb(62, 60, 60);
-    padding-top: 4px;
-    border-bottom: 1px solid rgb(229, 224, 224);
-}
 
 
 
